Added show download action in See All Available Connectors phrase

--- a/docs/components/doc-sections/en/connectors.html
+++ b/docs/components/doc-sections/en/connectors.html
@@ -8,7 +8,7 @@
         A connector is a class object that is associated with <i class="note mark-el">Easy</i> making it able to make
         outside requests using built-in methods and simple commands. When it is imported it also creates an instance
         of it self configuring that instance in the Easy Object. <br>
-        <a class="mark-el">See All Available Connectors</a>
+        <a class="mark-el" on:click="showModal">See All Available Connectors</a>
     </p>
 
     <div class="block-note warn">
