--- a/docs/components/doc-sections/en/intro-tutorial.html
+++ b/docs/components/doc-sections/en/intro-tutorial.html
@@ -30,8 +30,8 @@
     <h3> About the Tutorial </h3>
 
     <p>
-        These docs assume that you are already familiar with <a class="mark-el" title="Learn HTML"
-            target="_blank" href="https://developer.mozilla.org/docs/Learn/HTML/Introduction_to_HTML">HTML</a>,
+        These docs assume that you are already familiar with <a class="mark-el" title="Learn HTML" target="_blank"
+            href="https://developer.mozilla.org/docs/Learn/HTML/Introduction_to_HTML">HTML</a>,
         <a title="Learn Javascript" target="_blank" class="mark-el"
             href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript">JavaScript</a>
         and <a title="Learn CSS" target="_blank" class="mark-el"
@@ -79,10 +79,10 @@
 
     <p>
         This is a simple <b>live editor</b> that allow us to compile the code write on it, we can use tabs to
-        write another part of the code (normally used in component concept), and to be able to get the contente
-        of the tab we need to <i class="note mark-el">editor.tab(tabName)</i> the <i class="mark-el">tabName</i>
-        may not contain <i class="mark-el">spaces</i> and <i class="mark-el">special characters</i>, use hifen
-        and underscores to separate strings.
+        write another part of the code (normally used in component concept). To be able to get the content
+        of the tab use <i class="note mark-el">editor.tab(tabName)</i>. When defining the <i class="mark-el">tabName</i>
+        dot not use <i class="mark-el">spaces</i> and <i class="mark-el">special characters</i>, 
+        use hifen or underscores to separate strings.
     </p>
 </section>
 <script>
