--- a/docs/components/doc-sections/pt/download-connectors.html
+++ b/docs/components/doc-sections/pt/download-connectors.html
@@ -3,21 +3,21 @@
         title="Help us improve this documentation on github!" class="edit-content"><span
             class="fa fa-pencil"></span></a>
 
-    <h1> <a> Connectors </a> </h1>
+    <h1> <a> Conectores (Connectors) </a> </h1>
 
     <h2> Easy Ajax </h2>
 
-    <h3> <a> Locally </a> </h3>
-    <p> Use it locally, download the file and import it: </p>
+    <h3> <a> Localmente (Locally) </a> </h3>
+    <p> Use localmente, baixe o ficheiro e importe: </p>
 
-    <p> <a class="button-like" download target="_blank" href="{{ app.connectors.ajax }}"> Download </a></p>
+    <p> <a class="button-like" download target="_blank" href="{{ app.connectors.ajax }}"> Baixar </a></p>
 
     <div e-ignore class="code-container" code-ext=".html">
         <textarea cm-lang="text/html">
     <script src="js/easy.ajax.js"></script></textarea>
     </div>
 
-    <p> Or, use... </p>
+    <p> Ou, use... </p>
     <h3> <a> CDN </a> </h3>
     <div class="code-container" code-ext=".html">
         <textarea cm-lang="text/html">
@@ -25,16 +25,16 @@
     </div>
 
     <br>
-    <h2> Add Your Connector Here, <a class="mark-el"
+    <h2> Adicione o seu conector aqui, <a class="mark-el"
             href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/download-connectors.html"
-            class="edit-content"> Click Me </a>.</h2><br>
+            class="edit-content"> Clique em mim </a>.</h2><br>
 
     <h2> Easy Free </h2>
 
-    <h3> <a> Locally </a> </h3>
+    <h3> <a> Localmente (Locally) </a> </h3>
 
-    <p> Download the <i class="note mark-el">free</i> file: </p>
-    <p> <a class="button-like" download href="{{ app.connectors.free }}"> Download </a> </p>
+    <p> Baixe o ficheiro <i class="note mark-el">free</i>: </p>
+    <p> <a class="button-like" download href="{{ app.connectors.free }}"> Baixar </a> </p>
 </section>
 <script>
     this.mounted = function (el) {
