--- a/docs/components/views/en/main.html
+++ b/docs/components/views/en/main.html
@@ -76,7 +76,7 @@
                     <h2>Hello World Example</h2>
                     <p>To begin showing some data in the UI is simple
                         as you can see now...
-                        Some directives can be similar to Vue but, belive us,
+                        Some directives can be similar to Vue but, believe us,
                         there are diferentes by the inside.</p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <div>
                     <h2>Simple Sum Example</h2>
                     <p>Let's Two Way Data Bind now...</p>
-                    <p>We are using dynamic data property definition `<i class="mark-el">e-def</i>`.
+                    <p>We are using dynamic data property definition <i class="mark-el">e-def</i>.
                         In this type of binding when some value changes, it updates
                         the specific field in the element, it means that
                         your element will be always the same.</p>
@@ -102,7 +102,7 @@
                 <div>
                     <h2>Todo List Example</h2>
                     <p>Let's make a TODO List App</p>
-                    <p>You can manage your list as you expect.</p>
+                    <p>You can manage your list as you expect, and they are reactives to changes.</p>
                 </div>
             </div>
             <inc src="editor" wait-data="todo-eg"></inc>
