--- a/docs/components/views/tutorial.html
+++ b/docs/components/views/tutorial.html
@@ -81,7 +81,7 @@
                         <li> <a mark="#cmd_e_order"> e-order </a> </li>
                         <li> <a mark="#cmd_e_anm"> e-anm </a> </li>
                         <li> <a mark="#cmd_e_toggle"> e-toggle </a> </li>
-                        <li> <a mark="#cmd_e"> e-[something] </a> </li>
+                        <li> <a mark="#cmd_e"> e-[attribute] </a> </li>
                     </ul>
                 </li>
                 <li sec> <a i:href="/tutorial/events">
