--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -1,19 +1,18 @@
 <section class="section">
-    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/delimiters.html" 
-    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/delimiters.html"
+        title="Help us improve this documentation on github!" class="edit-content"><span
+            class="fa fa-pencil"></span></a>
 
-    <h1> <a id="delimiters"> Delimiters </a> </h1>
+    <h1> <a id="delimiters"> Delimitadores (Delimiters) </a> </h1>
 
     <p>
-        By default Easy brings two types of delimiters, which are the 
-        <span class="note">easy</span> delimiter and the 
-        <span class="note">common</span> delimiter that is used by Vue.js, 
-        Angular.js, and others.
+        By default Easy brings two types of delimiters, which are the <span class="note">easy</span> delimiter and the
+        <span class="note">common</span> delimiter that is used by Vue.js, Angular.js, and others.
     </p>
 
     <p>
         The delimiters open a space in HTML to execute some javascript code, it means that we
-        can execute any pure js code variables, function, ternary operatiors, etc. I only need
+        can execute any pure js code variables, function, ternary operatiors, etc. It only need
         to return a value.
     </p>
 
@@ -23,22 +22,23 @@
             class="note mark-el">JSON</a>.
     </p>
 
-    <h3> <a id="dlm_easy"> Easy </a> </h3>
+    <h3> <a id="dlm_easy"> Easy Delimiter </a> </h3>
 
     <p e-ignore>
-        To use this delimiter just do the following: <span class="note"> <span class="mark-el">-e-</span> [Content] <span class="mark-el">-</span> </span>
+        To use this delimiter just do the following: <span class="note"> <span class="mark-el">-e-</span> [Content]
+            <span class="mark-el">-</span> </span>
     </p>
 
     <h3> <a id="dlm_easy"> Common </a> </h3>
 
     <p e-ignore>
-        To use this delimiter just do the following: <span class="note"> <span class="mark-el">{{</span> [Content] <span class="mark-el">}}</span> </span>
+        To use this delimiter just do the following: <span class="note"> <span
+                class="mark-el">{{</span> [Content] <span class="mark-el">}}</span> </span>
     </p>
 
     <p>
-        We can check all the available delimiters in property <span
-            class="note mark-el">instance.delimiters</span>.
-            These values is unalterable by this property.
+        We can check all the available delimiters in property <span class="note mark-el">instance.delimiters</span>.
+        These values is unalterable by this property.
     </p>
 
     <div class="block-note info">
