--- a/docs/components/doc-sections/en/instance.html
+++ b/docs/components/doc-sections/en/instance.html
@@ -7,7 +7,7 @@
 
     <p>
         When we import <span class="note">Easy</span> it will added a function to the global
-        object, so, to begin using it we need to create a new instance of Easy Class, this
+        object, so to begin using it we need to create a new instance of Easy Class. This
         constructor expects two parameters:
     </p>
 
@@ -68,14 +68,14 @@
 
     <ul>
         <li>
-            <span class="note mark-el">{ Boolean } log</span> &ndash; Allows the logs
-            (logs, errors and warning) to be shown. Default value is <span class="note mark-el">true</span>.
+            <span class="note mark-el">{ Boolean } log</span> &ndash; allows the logs
+            (info, errors and warning) to be shown. Default value is <span class="note mark-el">true</span>.
         </li>
         <li>
             <span class="note mark-el">{ Boolean } deepIgnore</span> &ndash; allows you to ignore all elements
             that are inside a container (even those that are added later) when using the command
             <span class="note">e-ignore</span> (We'll talk about that in the
-            <a href="docs.page.2.html#commands" class=" mark-el">Commands</a> section). <br>
+            <a href="docs.html?load=sctn2#commands" class=" mark-el">Commands</a> section). <br>
             <span class="note att-border">Be careful, this can slow down your
                 application.</span>
         </li>
@@ -93,8 +93,8 @@
         <li>
             <span class="note mark-el">{ Boolean } rerenderOnArrayChange</span> &ndash; this the
             <i class="note-mark-el">e-for</i> exclusive config that allows to rerender all the items
-            of the array in the UI when it changes. We'll get into more details in <a href="docs.page.2.html#cmd_e_for"
-                class="mark-el">e-for</a> section.
+            of the array in the UI when it changes. We'll get into more details in <a
+                href="docs.html?load=sctn2#cmd_e_for" class="mark-el">e-for</a> section.
         </li>
     </ul>
 
@@ -103,7 +103,7 @@
         As already mentioned, the data property allows you to define the data that the application will have
         when it starts, however there is a way to add data while it is already running with the
         <span class="note">app.setData(...)</span> method. (We'll talk about that in the
-        <a href="docs.page.3.html#methods" class=" mark-el">methods</a> section).
+        <a href="docs.html?load=sctn3#methods" class=" mark-el">methods</a> section).
         <br>
         Data or properties defined on <span class="note mark-el">data</span> are not normal properties, they are
         reactive, this means that they react to changes made to them.
@@ -118,7 +118,7 @@
         <h4> {{ message }} </h4>
     </div></textarea>
             </div>
-            
+
             <div class="code-container" code-ext=".js">
                 <textarea cm-lang="javascript">
     var app1 = new Easy('#app1', {
