--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -16,7 +16,17 @@
             <li> <a class="tutorial-anchor" :href="/tutorial/introduction"> Tutorial </a> </li>
             <li> <a href="docs.html"> Docs </a> </li>
             <li> <a href="docs.connectors.html"> Connectors </a> </li>
-            <li class="hide-it"> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span>
+            <li>
+                <span class="text" on:click="showLanguageDropDown = !showLanguageDropDown">
+                    Language • <span e-content="{{ selectedLang.toUpperCase() }}">#</span>
+                </span>
+
+                <div class="wrapper hide-it" e-class="{ 'hide-it': !showLanguageDropDown }">
+                    <div class="item" e-for="item of translations" on:click="selectedLang = item.id">
+                        <span class="ident" e-content="{{ item.id.toUpperCase() }}"></span>
+                        <span class="name" e-content="{{ item.name }}"></span>
+                    </div>
+                </div>
             </li>
             <li> <a on:click="showModal">Download</a> </li>
             <li> <a href="https://github.com/AfonsoMatElias/easy" class="fa fa-github"></a> </li>
@@ -33,7 +43,7 @@
             var anchors = el.nodes('a');
             for (var i = 0; i < anchors.length; i++) {
                 var e = anchors[i];
-                if (e.pathname === location.pathname ) {
+                if (e.pathname === location.pathname) {
                     e.classList.add('active-link');
                     break;
                 }
